2008-01-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #211353

	* filtertypes.xml:
	* vfoldertypes.xml:
	* em-folder-view.c:
	* em-folder-browser.c:
	* em-mailer-prefs.h:
	* em-mailer-prefs.c:
	* mail-config.h:
	* mail-config.c:
	* mail-config.glade:
	* message-list.c:
	Label tags are now generated based on label name when creating, except
	of first 5 labels. New menu option "New Label" in popup menu over
	message list and editing of labels has been changed in Preferences.
	Also renaming tab in Preferences for "Labels", not "Colors", and the
	tab label too.
	mail-config-label... functions was moved to e-util/e-util-labels.c/.h.
	* message-list.etspec: Normalized columns has been moved by one
	when label column has been added.

2008-01-10  Srinivasa Ragavan  <sragavan@novell.com>

	** Most of the errors are now non-intrusive 

	* em-folder-utils.c: (emfu_copy_folder_selected),
	(emfu_delete_response), (em_folder_utils_delete_folder):
	* em-folder-view.c: (emfv_delete_msg_response):
	* em-utils.c: (em_utils_edit_filters),
	(em_utils_save_part_to_file), (em_utils_temp_save_part),
	(error_response), (em_utils_show_error_silent),
	(em_utils_show_info_silent):
	* em-utils.h:
	* mail-autofilter.c: (mail_filter_delete_uri):
	* mail-component.c: (mail_component_show_logger):
	* mail-mt.c: (mail_msg_free):
	* mail-session.c: (do_user_message):
	* mail-vfolder.c: (mail_vfolder_delete_uri), (vfolder_edit_rule):

2008-01-10  Sankar P  <psankar@novell.com>

	* em-format-html.c: (efh_format_headers):
	Decode the right thingy. Fixes a regression in
	decoding of face header introduced while migration of
	camel_* functions to g_* functions.

2008-01-08  Djihed Afifi <djihed@gmail.com>

	** Fix for bug #309432

	* em-format-html.c: Fix message headers for RTL languages.

2008-01-08  Colin Leroy  <colin@colino.net>

	** Fix for bug #499145

	* mail/em-composer-utils.c: Follow RFC 3798 to send return receipts.

2008-01-08  Bharath Acharya  <abharath@novell.com>
